fixed styling alignment

--- a/static/styles.less
+++ b/static/styles.less
@@ -9,6 +9,14 @@ body {
     .preventOverscroll();
 }
 
+.search-bar {
+    text-align: center;
+    // position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
+}
+
 .card-container {
     .deadCenter();
 }
